# betabrite_alpha_led-signs

./: NOTES_betabrite_options_IE_color_transistions_font_etc  NOTES_working_betabrite_examples  README.md  settime.bash  test.pl
app_linux/: REDAME  betabritelinux-1.0.tar.bz2
app_linux2/: Download betabrite messenger 0.1.0 for Linux.mht
app_linux2/betabrite-0.1.0/: INSTALL  Makefile  NEWS  README  alphatest.pl  config.cache  config.status  log.msg
app_linux2/betabrite-0.1.0/src/: Makefile
betabrite-0.1.0/: AUTHORS  ChangeLog  Makefile.in  configure  configure.in
betabrite-0.1.0/src/: Makefile.in
current/: betabrite-socat-tty-setup.sh  betabrite-test.pl
kodi-serial/: Controlling Arduino with KODI addon – Part I: Turn on an LED through serial communication | Nick's Development Blog.mht  Controlling Arduino with KODI addon – Part II: Sending data from a KODI (service) addon | Nick's Development Blog.mht  Controlling Arduino with KODI addon – Part III: Show KODI playing movie info on an LCD | Nick's Development Blog.mht
src/: Makefile.am  betabrite.c
