dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/betabrite.c)
AM_INIT_AUTOMAKE(betabrite, 0.1.0)

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h stdio.h string.h stdlib.h errno.h termios.h sys/types.h sys/stat.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(atoi strlen)

AC_OUTPUT(src/Makefile Makefile)
